Fix collapsed nav menu

--- a/Latihan CSS GRID/Pages/Index.razor.css
+++ b/Latihan CSS GRID/Pages/Index.razor.css
@@ -7,6 +7,7 @@
     display: grid;
     gap: 20px;
     margin: 0 auto;
+    height: calc(100vh + 10px);
 }
 
 .banner{
@@ -14,6 +15,7 @@
     grid-template-areas:
         'hero hero feature1'
         'hero hero feature2';
+    gap: 20px;
 }
 
 .hero {
@@ -77,7 +79,6 @@
     }
 
 .gallery {
-    order: 4;
     display: grid;
     gap: 5px;
     margin-top: 50px;
@@ -90,6 +91,8 @@
         text-align: center;
         grid-column: 1 / -1;
     }
+
+
 @media screen and (max-width: 690px){
     .hero > *{
         display: flex;
